--- a/DrDDiary/Views/MainView.axaml
+++ b/DrDDiary/Views/MainView.axaml
@@ -11,6 +11,8 @@
          to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
     <vm:MainViewModel />
   </Design.DataContext>
-
-  <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <TextBlock Text="{Binding UngaBunga}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+  </StackPanel>
 </UserControl>
