--- a/DrDDiary/Views/MainView.axaml
+++ b/DrDDiary/Views/MainView.axaml
@@ -24,7 +24,8 @@
     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,300,0,0">
       <Button Name="newButton"
               PointerEntered="Button_PointerEntered"
-              PointerExited="Button_PointerExited">
+              PointerExited="Button_PointerExited"
+              Command="{Binding NewCharButtonClicked}">
         <Panel>
           <Image Classes="DragonHeadImage"/>
         </Panel>
