--- a/DrDDiary/Views/CharacterView.axaml
+++ b/DrDDiary/Views/CharacterView.axaml
@@ -2,14 +2,29 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="1024" d:DesignHeight="1024"
-             Width="1024" Height="1024"
+             mc:Ignorable="d" d:DesignWidth="1500" d:DesignHeight="900"
+             Width="1500" Height="900"
              x:Class="DrDDiary.Views.CharacterView">
   <UserControl.Background>
-    <ImageBrush Source="\Assets\Images\BasicPage\basic_background_diary.png"/>
+    <ImageBrush Source="\Assets\Images\BasicBackgrounds\basic_background_diary.png"/>
   </UserControl.Background>
   <Grid>
+    <Label x:Name="nameOfCharacter"
+       Foreground="Black"
+       Margin="200,100,0,0"
+       HorizontalAlignment="Left"
+       FontFamily="Monotype Corsiva"
+       FontWeight="Bold"
+       FontSize="30"></Label>
+        <Label x:Name="raceOfCharacter"
+       Foreground="Black"
+       Margin="200,130,0,0"
+       HorizontalAlignment="Left"
+       FontFamily="Monotype Corsiva"
+       FontWeight="Bold"
+       FontSize="30"></Label>
     <Label
+      Foreground="Red"
       HorizontalAlignment="Center"
       VerticalAlignment="Center">Character Screen</Label>
   </Grid>
