--- a/DrDDiary/Views/InventoryView.axaml
+++ b/DrDDiary/Views/InventoryView.axaml
@@ -2,7 +2,16 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="1024" d:DesignHeight="1024"
+             Width="1500" Height="900"
              x:Class="DrDDiary.Views.InventoryView">
-  Welcome to Avalonia!
+  <UserControl.Background>
+    <ImageBrush Source="\Assets\Images\BasicBackgrounds\basic_background_diary.png"/>
+  </UserControl.Background>
+  <Grid>
+    <Label
+      Foreground="Red"
+      HorizontalAlignment="Center"
+      VerticalAlignment="Center">Inventory Screen</Label>
+  </Grid>
 </UserControl>
