--- a/DrDDiary/Views/MainWindow.axaml
+++ b/DrDDiary/Views/MainWindow.axaml
@@ -104,7 +104,7 @@
                HorizontalAlignment="Center"
                FontFamily="Monotype Corsiva"
                FontWeight="Bold"
-               FontSize="40">PlaceHolder</Label>
+               FontSize="40"></Label>
       </StackPanel>
     </StackPanel>
   </Grid>
