--- a/DrDDiary/Views/CharacterView.axaml
+++ b/DrDDiary/Views/CharacterView.axaml
@@ -13,19 +13,35 @@
   </UserControl.Background>
   <Grid>
     <Label x:Name="nameOfCharacter"
-       Foreground="Black"
-       Margin="200,100,0,0"
-       HorizontalAlignment="Left"
-       FontFamily="Monotype Corsiva"
-       FontWeight="Bold"
-       FontSize="30"></Label>
-        <Label x:Name="raceOfCharacter"
-       Foreground="Black"
-       Margin="200,130,0,0"
-       HorizontalAlignment="Left"
-       FontFamily="Monotype Corsiva"
-       FontWeight="Bold"
-       FontSize="30"></Label>
+           Foreground="Black"
+           Margin="200,100,0,0"
+           HorizontalAlignment="Left"
+           FontFamily="Monotype Corsiva"
+           FontWeight="Bold"
+           FontSize="30"></Label>
+    <TextBox Name="NameOfCharacter_TextBox"
+             Width="300"
+             Height="30"
+             Margin="275,100,0,0"
+             Foreground="Black"
+             HorizontalAlignment="Left"
+             VerticalAlignment="Top">
+    </TextBox>
+    <Label x:Name="raceOfCharacter"
+           Foreground="Black"
+           Margin="200,130,0,0"
+           HorizontalAlignment="Left"
+           FontFamily="Monotype Corsiva"
+           FontWeight="Bold"
+           FontSize="30"></Label>
+    <TextBox Name="RaceOfCharacter_TextBox"
+             Width="300"
+             Height="30"
+             Margin="375,135,0,0"
+             Foreground="Black"
+             HorizontalAlignment="Left"
+             VerticalAlignment="Top">
+    </TextBox>
     <Grid>
       <Image Source="/Assets/Images/CharacterScreen/frame_background_character_screen.png" 
              Stretch="None" 
