Basic label property settings moved to app.axaml file, reloading labels when global language event changes has been invoked moved to view file

--- a/DrDDiary/Views/MainWindow.axaml
+++ b/DrDDiary/Views/MainWindow.axaml
@@ -106,10 +106,7 @@
         <Label x:Name="nameOfButtonLabel"
                Foreground="White"
                Margin="0,135,0,0"
-               HorizontalAlignment="Center"
-               FontFamily="Monotype Corsiva"
-               FontWeight="Bold"
-               FontSize="40"></Label>
+               HorizontalAlignment="Center"/>
       </StackPanel>
     </StackPanel>
   </Grid>
