--- a/DrDDiary/App.axaml
+++ b/DrDDiary/App.axaml
@@ -37,7 +37,13 @@
           </Setter>
           <Setter Property="Opacity" Value="0.1"/>
         </Style>
-      </Style>     
+      </Style>
+      <Style Selector="Label">
+        <Setter Property="FontFamily" Value="Monotype Corsiva"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="Foreground" Value="Black"/>
+      </Style>
       <!--<Style Selector="Button.LanguageButton">
         <Setter Property="Background" Value="Transparent" />
         <Style Selector="^:pressed.LanguageButton /template/ ContentPresenter#PART_ContentPresenter">
