--- a/DrDDiary/Views/CharacterView.axaml
+++ b/DrDDiary/Views/CharacterView.axaml
@@ -14,12 +14,8 @@
   <Grid>
     <!--Character name and race labels and textboxes-->
     <Label x:Name="nameOfCharacter"
-           Foreground="Black"
            Margin="200,100,0,0"
-           HorizontalAlignment="Left"
-           FontFamily="Monotype Corsiva"
-           FontWeight="Bold"
-           FontSize="30"></Label>
+           HorizontalAlignment="Left"/>
     <TextBox Name="NameOfCharacter_TextBox"
              Width="300"
              Height="30"
@@ -29,12 +25,8 @@
              VerticalAlignment="Top">
     </TextBox>
     <Label x:Name="raceOfCharacter"
-           Foreground="Black"
            Margin="200,130,0,0"
-           HorizontalAlignment="Left"
-           FontFamily="Monotype Corsiva"
-           FontWeight="Bold"
-           FontSize="30"></Label>
+           HorizontalAlignment="Left"/>
     <TextBox Name="RaceOfCharacter_TextBox"
              Width="300"
              Height="30"
@@ -66,14 +58,15 @@
         </Panel>
       </Button>
     </Grid>
-    <StackPanel Background="Green" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-180,-110,0,0">
+    <StackPanel Background="Green" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-180,-15,0,0">
       <Label Name="ClassesBasic"/>
       <Label Name="lblFighter"/>
       <Label Name="lblTrickster"/>
       <Label Name="lblHunter"/>
       <Label Name="lblMedicaster"/>
       <Label Name="lblConjurer"/>
-      <Label Name="ClassesAdvanced"/>
+      <Label Name="ClassesAdvanced"
+             Margin="0,10,0,0"/>
       <Label Name="lblWarrior"/>
       <Label Name="lblBorderGuard"/>
       <Label Name="lblScholar"/>
