Minor changes in application-reading image files, set some labels font size to 30

--- a/DrDDiary/Views/MainWindow.axaml
+++ b/DrDDiary/Views/MainWindow.axaml
@@ -106,7 +106,8 @@
         <Label x:Name="nameOfButtonLabel"
                Foreground="White"
                Margin="0,135,0,0"
-               HorizontalAlignment="Center"/>
+               HorizontalAlignment="Center"
+               FontSize="30"/>
       </StackPanel>
     </StackPanel>
   </Grid>
