--- a/DrDDiary/Views/CharacterView.axaml
+++ b/DrDDiary/Views/CharacterView.axaml
@@ -15,7 +15,8 @@
     <!--Character name and race labels and textboxes-->
     <Label x:Name="nameOfCharacter"
            Margin="200,100,0,0"
-           HorizontalAlignment="Left"/>
+           HorizontalAlignment="Left"
+           FontSize="30"/>
     <TextBox Name="NameOfCharacter_TextBox"
              Width="300"
              Height="30"
@@ -26,7 +27,8 @@
     </TextBox>
     <Label x:Name="raceOfCharacter"
            Margin="200,130,0,0"
-           HorizontalAlignment="Left"/>
+           HorizontalAlignment="Left"
+           FontSize="30"/>
     <TextBox Name="RaceOfCharacter_TextBox"
              Width="300"
              Height="30"
