--- a/DrDDiary/Views/CharacterView.axaml
+++ b/DrDDiary/Views/CharacterView.axaml
@@ -18,8 +18,9 @@
            HorizontalAlignment="Left"
            FontSize="30"/>
     <TextBox Name="NameOfCharacter_TextBox"
-             Width="300"
+             Width="400"
              Height="30"
+             MaxLength="45"
              Margin="275,100,0,0"
              Foreground="Black"
              HorizontalAlignment="Left"
@@ -32,6 +33,7 @@
     <TextBox Name="RaceOfCharacter_TextBox"
              Width="300"
              Height="30"
+             MaxLength="20"
              Margin="375,135,0,0"
              Foreground="Black"
              HorizontalAlignment="Left"
@@ -60,25 +62,205 @@
         </Panel>
       </Button>
     </Grid>
-    <StackPanel Background="Green" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-180,-15,0,0">
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="-180,-15,0,0" >
       <Label Name="ClassesBasic"/>
-      <Label Name="lblFighter"/>
-      <Label Name="lblTrickster"/>
-      <Label Name="lblHunter"/>
-      <Label Name="lblMedicaster"/>
-      <Label Name="lblConjurer"/>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblFighter"
+               Grid.Column="0"/>
+        <TextBox Name="lvlFighter"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblTrickster"
+               Grid.Column="0"/>
+        <TextBox Name="lvlTrickster"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblHunter"
+               Grid.Column="0"/>
+        <TextBox Name="lvlHunter"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblMedicaster"
+               Grid.Column="0"/>
+        <TextBox Name="lvlMedicaster"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblConjurer"
+               Grid.Column="0"/>
+        <TextBox Name="lvlConjurer"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
       <Label Name="ClassesAdvanced"
              Margin="0,10,0,0"/>
-      <Label Name="lblWarrior"/>
-      <Label Name="lblBorderGuard"/>
-      <Label Name="lblScholar"/>
-      <Label Name="lblWizard"/>
-      <Label Name="lblScout"/>
-      <Label Name="lblRobber"/>
-      <Label Name="lblMage"/>
-      <Label Name="lblDruid"/>
-      <Label Name="lblShaman"/>
-      <Label Name="lblAlchemist"/>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblWarrior"
+               Grid.Column="0"/>
+        <TextBox Name="lvlWarrior"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblBorderGuard"
+               Grid.Column="0"/>
+        <TextBox Name="lvlBorderGuard"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblScholar"
+               Grid.Column="0"/>
+        <TextBox Name="lvlScholar"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblWizard"
+               Grid.Column="0"/>
+        <TextBox Name="lvlWizard"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblScout"
+               Grid.Column="0"/>
+        <TextBox Name="lvlScout"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblRobber"
+               Grid.Column="0"/>
+        <TextBox Name="lvlRobber"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblMage"
+               Grid.Column="0"/>
+        <TextBox Name="lvlMage"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblDruid"
+               Grid.Column="0"/>
+        <TextBox Name="lvlDruid"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblShaman"
+               Grid.Column="0"/>
+        <TextBox Name="lvlShaman"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
+      <Grid>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Label Name="lblAlchemist"
+               Grid.Column="0"/>
+        <TextBox Name="lvlAlchemist"
+                 Grid.Column="1"
+                 Foreground="Black"
+                 HorizontalAlignment="Right"
+                 HorizontalContentAlignment="Center"/>
+      </Grid>
     </StackPanel>
   </Grid>
 </UserControl>
